--- a/demo/app/views/home/index.html.erb
+++ b/demo/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<ul>
+  <li>
+    <%= link_to 'Teachers', teachers_path %>
+  </li>
+  <li>
+    <%= link_to 'Teams', teams_path %>
+  </li>
+</ul>
+
+
